授業内容の取得を追加した
